Add joblib to requirements.txt

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "fc4ceadf",
    "metadata": {},
    "outputs": [],
@@ -191,17 +191,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "da41c70b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install streamlit pyngrok --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "41f45be4",
    "metadata": {},
    "outputs": [],
@@ -211,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "85354e07",
    "metadata": {},
    "outputs": [],
@@ -226,9 +236,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (base)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python-base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
