--- a/idx.ipynb
+++ b/idx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "2a23d286",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "db0200f2",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "bbc5fabb",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "0e75ad38",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "0dcbed6e",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "eb0ee444",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "248abf8b",
    "metadata": {},
    "outputs": [
@@ -246,19 +246,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "286c8828",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Defining Recommendation Function (Hybrid) ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#create prediction/recom function (hybrid logic di ppt)\n",
     "\n",
@@ -339,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "156be5d8",
    "metadata": {},
    "outputs": [
@@ -503,9 +494,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (base)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python-base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
