--- a/idx.ipynb
+++ b/idx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "2a23d286",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "db0200f2",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "bbc5fabb",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "0e75ad38",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "0dcbed6e",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "eb0ee444",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "248abf8b",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.25, random_state=42, stratify=y)\n",
-    "rf_classifier = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced')\n",
+    "rf_classifier = RandomForestClassifier(n_estimators=100, random_state=42, class_weight='balanced') #jumlah decision tree\n",
     "rf_classifier.fit(X_train, y_train)\n",
     "\n",
     "#accuracy & classification report\n",
@@ -249,16 +249,7 @@
    "execution_count": null,
    "id": "286c8828",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Defining Recommendation Function (Hybrid) ---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#create prediction/recom function (hybrid logic di ppt)\n",
     "\n",
@@ -339,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "156be5d8",
    "metadata": {},
    "outputs": [
